# marakas_test_task

./: .gitignore  README.MD  pyproject.toml
amazon_scraper/: input.txt
amazon_scraper/amazon_scraper/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
amazon_scraper/amazon_scraper/spiders/: amazon_editioral_recommendations.py
