[tool.poetry]
name = "marakas_test_task"
version = "0.1.0"
description = "test task for marakas"
authors = ["Mo1far <vladuslav09@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^1.8.0"
scrapy-splash = "^0.7.2"
scrapy-user-agents = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
